--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
-<p>
-  home-page works!
-</p>
+<app-navbar></app-navbar>
+<div class="container">
+      home-page works!
+    <!-- some html code kteer  -->
 
-<!-- some html code kteer  -->
-
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+</div>
