front end login and register

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-      home-page works!
+      dashboard works!
     <!-- some html code kteer  -->
 
     <router-outlet></router-outlet>
