--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,19 @@
+
 <p>
   login works!
 </p>
+
+<html><head></head><body>
+<form action="/action_page.php" class="loginForm">
+  <div class="form-group">
+   
+    <input type="text" [(ngModel)]="username" class="form-control" id="email" placeholder="Username">
+  </div>
+  <div class="form-group">
+    
+    <input type="password" [(ngModel)]="password" class="form-control" id="pwd" placeholder="Password">
+  </div>
+ 
+  <button type="submit" (click)="login()" class="btn btn-primary">Login</button>
+</form>
+</body></html>
