--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,26 @@
+
 <p>
   signup works!
 </p>
+
+<html><head></head><body>
+<form  class="loginForm">
+  <div class="form-group">
+   
+    <input type="text"  class="form-control" id="email" placeholder="Username">
+  </div>
+  <div class="form-group">
+    
+    <input type="password"  class="form-control" id="pwd" placeholder="Password">
+  </div>
+   <div class="form-group">
+    
+    <select >
+  <option value="1">Component1</option>
+  <option value="2">Component2</option>
+
+</select>
+  </div>
+  <button type="submit" class="btn btn-primary">Sign Up</button>
+</form>
+</body></html>
