--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,21 @@
 <app-navbar></app-navbar>
 <div class="container">
-      dashboard works!
-    <!-- some html code kteer  -->
+   <h1> Meet thirty one Team</h1>
+<p>
+  Arwash team fel koon 
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid reprehenderit sequi doloremque, recusandae blanditiis, unde laboriosam modi adipisci vel ea deleniti! Esse dolore eum inventore at voluptates commodi, unde reprehenderit.
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint temporibus exercitationem nostrum dolore similique aliquid consectetur nam, alias autem sed fuga fugit magni. Maiores nisi itaque accusamus obcaecati fuga dolor.
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto officiis et non sapiente cumque nam maiores libero ducimus quis accusamus! Laboriosam odio molestias voluptate natus consectetur nam? Quidem, debitis nihil!
+</p>
+
+
+<div class="row">
+  <div class="column">
+    <img src="../../assets/imgs/attia.jpg">
+  </div>
+  <div class="column"> Da Attia</div>
+  
+</div>
 
     <router-outlet></router-outlet>
 </div>
