--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,14 @@
 </p>
 
 <html><head></head><body>
-<form action="/action_page.php" class="loginForm">
+<form  class="loginForm">
   <div class="form-group">
    
-    <input type="text" [(ngModel)]="username" class="form-control" id="email" placeholder="Username">
+    <input type="text" name="username" [(ngModel)]="username" class="form-control" id="email" placeholder="Username">
   </div>
   <div class="form-group">
     
-    <input type="password" [(ngModel)]="password" class="form-control" id="pwd" placeholder="Password">
+    <input type="password" name="password" [(ngModel)]="password" class="form-control" id="pwd" placeholder="Password">
   </div>
  
   <button type="submit" (click)="login()" class="btn btn-primary">Login</button>
