--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,6 +14,7 @@
           <ul class="nav navbar-nav navbar-left">
             <li><a [routerLink]="['']">Home</a></li>
             <li><a [routerLink]="['store']">Store</a></li>
+            <li><a [routerLink]="['products']">My Products</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
