--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,182 +1,18 @@
-<p>
-  store works!
-</p>
 
-<html><head></head><body><h1>  Meet Team Thirty One </h1>
-  <br>
+<h2>{{title}}</h2>
+
+<table>
+  <tr>
+    <th>Creation Date</th>
+    <th>Product Name</th>
+    <th>Product Price</th>
+    <th>Seller</th>
+  </tr>
+  <tr *ngFor="let product of products">
+    <td>{{product.createdAt}}</td>
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.seller_name}}</td>
+  </tr>
   
-  <p class="description">
-      Team thirty one consists of eleven senior students majoring in Digital Media Engineering and Technology.
-    We are passionate about web development and eager to learn about MEAN Stack.
-    This is a mini-ebay website that displays products with their info.
-  
-    You can view the products of the tutorial, component, and of each indvidual.
-  </p>
-  
-  
-  <div class="row">
-    <div class="column">
-          <img src="..\..\assets\imgs\nagham.jpg">
-          
-      
-    </div>
-    <div class="column"> 
-        
-      <p>
-          <b>Nagham Ashraf: Scrum Master</b> 
-          <br> Fitness Freak
-          <br> Food lover </p>
-  
-  </div>
-    
-  </div>
-  
-  
-  
-  <div class="row">
-          <div class="column">
-                <img src="..\..\assets\imgs\ashour.jpg">
-                
-            
-          </div>
-          <div class="column"> </div>
-          <p>
-                      <b>Ahmed Ashour: Component 1 Leader </b>
-                  <br> Elnazer </p>
-        </div>
-  
-  
-        
-  <div class="row">
-          <div class="column">
-                <img src="..\..\assets\imgs\sandra.jpg">
-                
-            
-          </div>
-          <div class="column">
-  
-                  <p>
-                          <b>Sandra Iskander: Component 2 Leader</b> 
-                          <br> Like watching friends, gym, talking with people </p>
-          </div>
-          
-        </div>
-  
-  
-        <div class="row">
-              <div class="column">
-                    <img src="..\..\assets\imgs\shalaby.jpg">
-                    
-                
-              </div>
-              <div class="column"><p> 
-                  <b>Omar shalaby</b>
-                  <br> Conscious observing being </p>
-              </div>
-              
-            </div>
-  
-            <div class="row">
-                  <div class="column">
-                        <img src="..\..\assets\imgs\zyad.jpg">
-                        
-                    
-                  </div>
-                  <div class="column"> 
-  
-                      <p> <b>Zyad Nashar:</b>
-                          <br>  Favourite food:
-                          <br>  macarona bashamel, hunger games fan (The mockingjay)
-                      </p>
-                  </div>
-                  
-                </div>
-            
-  <div class="row">
-          <div class="column">
-                <img src="..\..\assets\imgs\mary.jpg">
-                
-            
-          </div>
-          <div class="column">
-              <p> <b>Mary Boulous</b>
-                  <br> Cooking and meeting new people    
-              </p>
-  
-          </div>
-          
-        </div>
-  
-        
-  <div class="row">
-          <div class="column">
-                <img src="..\..\assets\imgs\merna.jpg">
-                
-            
-          </div>
-          <div class="column"> 
-              <p> 
-                  <b>Merna Maklad </b>
-                  <br>  Reading, cooking, riding bikes
-              </p>
-  
-  
-          </div>
-          
-        </div>
-  
-        
-  <div class="row">
-          <div class="column">
-                <img src="..\..\assets\imgs\monica.jpg">
-                
-            
-          </div>
-          <div class="column">
-              <p>
-                  <b>Monica Bassem</b>
-                  <br> scout leader, cultures explorer
-  
-          </p></div>
-          
-        </div>
-  
-        
-  <div class="row">
-          <div class="column">
-                <img src="..\..\assets\imgs\attia.jpg">
-                
-            
-          </div>
-          <div class="column"> 
-  
-  
-              <p>
-                  <b>Amr Attia</b> 
-                  <br> Attia Sarcasm (Arwash Wa7ed fel tut)
-              </p>
-          </div>
-          
-  
-  
-         
-        </div>
-  
-        <div class="row">
-              <div class="column">
-                    <img src="..\..\assets\imgs\hadeel.jpg">
-                    
-                
-              </div>
-              <div class="column"> 
-                  <p> 
-                     
-  
-                     <b> Hadeel Adel:</b>
-                      <br>
-                      Like watching Anime and Asian dramas
-                  </p>
-              
-              </div>
-              
-            </div></body></html>
+</table>
