--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,8 +15,9 @@
             <li><a [routerLink]="['']">Home</a></li>
             <li><a [routerLink]="['store']">Store</a></li>
             <li><a [routerLink]="['products']">My Products</a></li>
+            <li><a [routerLink]="['comp-products']">My Component Products</a></li>
           </ul>
-
+comp-products
           <ul class="nav navbar-nav navbar-right">
             <li></li>
             <li><a [routerLink]="['login']">Login</a></li>
